--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node start.js",
     "lint": "standard",
-    "test": "npm run lint && gulp generate-assets && jest test/*"
+    "test": "jest test/*"
   },
   "dependencies": {
     "@cucumber/cucumber": "^7.3.1",
